...
    if(nextStartIndex > totalQueryResults || nextStartIndex > 1000) {
      showAlert(
        "Last Page Reached",
        "Sorry that you couldn't find your product. Try using a different set of keywords."
      );
...
    if(nextStartIndex <= 0) {
      showAlert(
        "No Prior Page",
        "It looks like you're already on the first page of results."
      );
...
            <Pressable
              style={globalStyle.headerButtonStyle}
              testID="Test_FilterButton"
              onPress={() => { 
                // If there are no search results, Alert the user and prevent the sort menu from opening
...
              animationType="fade"
              transparent={true}
              testID="Test_FilterSubmenuModal"
              style={{ flex: 0 }}
            >
...
                style={{ flex: 1, alignItems: "center", justifyContent: "center" }}
                onPress={() => { this.setState({ isFilterMenuOpen: false }) }}
                testID="Test_FilterSubmenuOpacity"
              >
                <View style={styles.sortSubmenuDesign} testID="Test_FilterSubmenu">
...
                      // Change style depending on if the filter is applied
                      style={[styles.sortSubmenuButton, this.state.filters.selectedCountries.length > 0 ? styles.sortSubmenuButtonActive : styles.sortSubmenuButtonDefault]}
                      testID="Test_FilterCountryButton"
                      onPress={() => { 
                        // Check if there are countries to filter through. If not, Alert the user and end early
...
                        animationType="fade"
                        transparent={true}
                        testID="Test_FilterCountrySubmenuModal"
                        style={{ flex: 0 }}
                      >
...
                          style={{ flex: 1, alignItems: "center", justifyContent: "center" }}
                          onPress={() => { this.setState({ isFilterCountryMenuOpen: false }) }}
                          testID="Test_FilterCountrySubmenuOpacity"
                        >
                          <View style={[styles.sortSubmenuDesign, { height: "50%" }]} testID="Test_FilterCountrySubmenu">
                            <SectionedMultiSelect
                              items={this.state.allAvailableCountries}
...
                      // Change style depending on if the filter is applied
                      style={[styles.sortSubmenuButton, this.state.filters.inStock ? styles.sortSubmenuButtonActive : styles.sortSubmenuButtonDefault]}
                      testID="Test_FilterInStockButton"
                      onPress={
                        () => {
...
                      style={[styles.sortSubmenuButton, this.state.filters.onSale ? styles.sortSubmenuButtonActive : styles.sortSubmenuButtonDefault]}

                      testID="Test_FilterOnSaleButton"
                      onPress={
                        () => {
...
                      // Change style depending on if the filter is applied
                      style={[styles.sortSubmenuButton, this.state.filters.selectedCategories.length > 0 ? styles.sortSubmenuButtonActive : styles.sortSubmenuButtonDefault]}
                      testID="Test_FilterCategoryButton"
                      onPress={() => { 
                         // Check if there are categories to filter through. If not, Alert the user and end early
...
                        animationType="fade"
                        transparent={true}
                        testID="Test_FilterCategorySubmenuModal"
                        style={{ flex: 0 }}
                      >
...
                          style={{ flex: 1, alignItems: "center", justifyContent: "center" }}
                          onPress={() => { this.setState({ isFilterCategoryMenuOpen: false }) }}
                          testID="Test_FilterCategorySubmenuOpacity"
                        >
                          <View style={[styles.sortSubmenuDesign, { height: "50%" }]} testID="Test_FilterCategorySubmenu">
                            <SectionedMultiSelect
                              items={this.state.allAvailableCategories}
...
            <Pressable
              style={globalStyle.headerButtonStyle}
              testID="Test_SortButton"
              onPress={() => { 
                // If there are no search results, Alert the user and prevent the sort menu from opening
...
              animationType="fade"
              transparent={true}
              testID="Test_SortSubmenu"
              style={{ flex: 0 }}
            >
...
                style={{ flex: 1, alignItems: "center", justifyContent: "center" }}
                onPress={() => { this.setState({ isSortMenuOpen: false }) }}
                testID="Test_SortSubmenuOpacity"
              >
                <View style={styles.sortSubmenuDesign} testID="Test_SortSubmenu">
...
                    <Pressable
                      style={[styles.sortSubmenuButton, this.state.sort == 'Lowest Price' ? styles.sortSubmenuButtonActive : styles.sortSubmenuButtonDefault]}
                      testID="Test_SortLowestPriceButton"
                      onPress={
                        () => {
...
                    <Pressable
                      style={[styles.sortSubmenuButton, this.state.sort == 'Highest Price' ? styles.sortSubmenuButtonActive : styles.sortSubmenuButtonDefault]}
                      testID="Test_SortHighestPriceButton"
                      onPress={
                        () => {
...
                    <Pressable
                      style={[styles.sortSubmenuButton, this.state.sort == 'A-Z' ? styles.sortSubmenuButtonActive : styles.sortSubmenuButtonDefault]}
                      testID="Test_SortA-ZButton"
                      onPress={
                        () => {
...
                    <Pressable
                      style={[styles.sortSubmenuButton, this.state.sort == 'Z-A' ? styles.sortSubmenuButtonActive : styles.sortSubmenuButtonDefault]}
                      testID="Test_SortZ-AButton"
                      onPress={
                        () => {
...
                    <Pressable
                      style={[styles.sortSubmenuButton, this.state.sort == 'Unit Price' ? styles.sortSubmenuButtonActive : styles.sortSubmenuButtonDefault]}
                      testID="Test_SortUnitPriceButton"
                      onPress={
                        () => {
...
            }
            disabled={itemList == null || itemList.length == 0}
            testID="Test_PageBackButton"
          >
            <Text style={[globalStyle.headerButtonText, {fontSize: 30}]}>{'<'}</Text>
...
            }
            disabled={itemList == null || itemList.length == 0}
            testID="Test_PageForwardButton"
          >
            <Text style={[globalStyle.headerButtonText, {fontSize: 30}]}>{'>'}</Text>
...
// Input: Strings for the alert's title and alert's message. Displays a simple, cancellable alert with the given title and message
function showAlert(alertTitle, alertMsg) {
  Alert.alert(alertTitle, alertMsg, [{ text: "OK" }], { cancelable: true });
}

...
