...
        >
          <Text style={globalStyle.wideButtonText}>Sign Up</Text>
        </Pressable>
        <Pressable
          style={globalStyle.wideButtonStyle}
          onPress={() => this.props.pageChange(PAGE_ID.location)}
          testID="Test_SignInSkip"
          accessibilityRole="button"
        >
          <Text style={globalStyle.wideButtonText}>
            Continue Without Signing in
          </Text>
        </Pressable>
...
